# unicode

./: .gitignore  CMakeLists.txt  benchmark.md  main.c  readme.md  unicode_benchmark.c
examples/: main.c  unicode_benchmark.c
include/private/: unicode_consts.h
include/public/: unicode.h
src/: main.c  unicode.c  unicode.h  unicode_benchmark.c
